# IGSE

./: .gitmodules  CMakeLists.txt  README.md
examples/: example.cpp  example.h  main.cpp  nxpcarinterface.cpp  nxpcarinterface.h
include/: gpuimage.h  gui.h  mat.h  pixel.h
src/: gui.cpp
src/engine/: gui.cpp  gui.h  mat.h  pixel.h
src/example/: main.cpp  nxpcarinterface.h
